--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "devDependencies": {
     "handlebars": "^2.0.0",
     "metalsmith": "^1.0.1",
+    "metalsmith-collections": "^0.6.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-metadata": "0.0.1",
+    "metalsmith-permalinks": "^0.4.0",
     "metalsmith-templates": "^0.6.0"
   },
   "author": "Kyle Florence <kyle.florence@gmail.com>",
